@@ -1,3 +1,8 @@
+2004-04-02	blytkerchan
+	* confl.l: handle spaces and newlines correctly
+	* confp.y: expect a colon between the configuration option's name and its value
+	pass the name of the parameter to libconf_optparam_new
+
 2004-04-01	blytkerchan
 	* readconf.cc: new file
 	* readconf.h: ditto
